--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link class="head-icon" rel="shortcut icon" href="https://i.postimg.cc/4yNK78p6/demon-toxic-mask.jpg" type="image/x-icon">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -137,10 +137,10 @@
          </div>
     </section>
     <br>
-    <!-- Product -->
-    <section id="Product" class="container-fluid d-flex justify-content-center product colorA rounded-4">
-            <div class="row">
-                <div class="col">
+<!-- Product -->
+    <section id="Product" class="container-fluid d-flex justify-content-around product colorA rounded-4">
+      <div class="row">
+        <div class="col">
     <div class="div1">
         <h4 class="text-light">Horizon Zero Dawn</h4>
         <img src="https://i.postimg.cc/j5Nw5PTR/j-AT7-Hjp-L49-A62b-U7h-LKXJ96b.webp" alt="Gaming" width="200">
@@ -174,145 +174,77 @@
     </div>
   </div>
 </div>
-            </div>
         </div>
-        <div class="row">
-            <div class="col">
-        <div class="div2">
-                    <h4 class="text-light">Dishonored</h4>
-                    <img src="https://i.postimg.cc/pr5JZpKT/MV5-BYm-Q2-Zj-Zi-ZDAt-ZGNh-ZC00-ZDI5-LTkz-MWQt-MTA2-MTFl-Njky-ODc0-Xk-Ey-Xk-Fqc-Gde-QXVy-Mz-Y0-MTE3-Nz-U-V1.jpg" alt="Gaming" width="200">
-                    <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                View more
-              </button>
-              <!-- Modal -->
-              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="exampleModalLabel">Games</h1>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                              <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="https://i.postimg.cc/sDKBv3kG/MV5-BY2-M5-Y2-I4-Mj-It-NWJk-ZC00-M2-Y1-LThm-NTMt-Nj-Vl-ZDhi-YWRj-ODhh-Xk-Ey-Xk-Fqc-Gde-QXVy-Mz-Y0-MTE3-Nz-U-V1.jpg" class="d-block w-100" alt="...">
-                                <p>Horizon is a 2017 action role-playing game developed by Guerrilla Games and published by Sony Interactive Entertainment for PS4 and PS5.</p>
-                              </div>
-                              <div class="carousel-item" data-bs-interval="20000">
-                                <img src="https://i.postimg.cc/90DJnxHc/dishonored-5.jpg" class="d-block w-100" alt="...">
-                                <p>Dishonored is a series of action-adventure games developed by Arkane Studios, and published by Bethesda Softworks. The franchise started with 2012 with Dishonored. A sequel, Dishonored 2 was released in 2016. A standalone expansion to Dishonored 2, Death of the Outsider, was released in 2017. </p>
-                              </div>
-                              <div class="carousel-item" data-bs-interval="10000">
-                                <img src="https://i.postimg.cc/qMs6s8WY/uh-Wvgrh-Jk-Mk2-Kt-Srmq-XO6qr-Y7nkey-GMO.jpg" class="d-block w-100" alt="...">
-                                <p>Mass Effect 3 is an action role-playing video game developed by BioWare and published by Electronic Arts. The third major entry in the Mass Effect series and the final installment of the original trilogy, it was released in March 2012 for Microsoft Windows, Xbox 360, and PlayStation 3.</p>
-                              </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
-                            </button>
-                          </div>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
+      </div>
+<!-- No2 -->
+      <div class="row">
+        <div class="col">
+      <div class="div1">
+        <h4 class="text-light">Dishonored</h4>
+        <img src="https://i.postimg.cc/W4fyfdNf/MV5-BYm-Q2-Zj-Zi-ZDAt-ZGNh-ZC00-ZDI5-LTkz-MWQt-MTA2-MTFl-Njky-ODc0-Xk-Ey-Xk-Fqc-Gde-QXVy-Mz-Y0-MTE3-Nz-U-V1.jpg" alt="Gaming" width="200">
+        <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModaling">
+      View more
+      </button>
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModaling" tabindex="-1" aria-labelledby="exampleModalingLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabeling">Games</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="https://i.postimg.cc/Prp56Dd0/dishonored-5.jpg" class="d-block w-100" alt="...">
+                    <p>Dishonored was a truly enjoyable stealth game, allowing players to explore the various depths of the industrial city of Dunwall.It's an open world based on foot. It's a familiar setting, New England.The Daud stuff is even basically needed to understand the story in game #2. So it's definitively worth it if to grab the whole thing, if you're a new player and/or have only played the original game. Yes. It comes with the DLC, so theres no real reason to buy the base game over it if you can.</p>
                   </div>
                 </div>
               </div>
-            </div>
-            </div>
         </div>
-        <div class="row">
-            <div class="col">
-        <div class="div3">
-                    <h4 class="text-light">Mass Effect 3</h4>
-                    <img src="https://i.postimg.cc/qMs6s8WY/uh-Wvgrh-Jk-Mk2-Kt-Srmq-XO6qr-Y7nkey-GMO.jpg" alt="Gaming" width="200">
-                    <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                View more
-              </button>
-              <!-- Modal -->
-              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="exampleModalLabel">Games</h1>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                              <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="https://i.postimg.cc/sDKBv3kG/MV5-BY2-M5-Y2-I4-Mj-It-NWJk-ZC00-M2-Y1-LThm-NTMt-Nj-Vl-ZDhi-YWRj-ODhh-Xk-Ey-Xk-Fqc-Gde-QXVy-Mz-Y0-MTE3-Nz-U-V1.jpg" class="d-block w-100" alt="...">
-                                <p>Horizon is a 2017 action role-playing game developed by Guerrilla Games and published by Sony Interactive Entertainment for PS4 and PS5.</p>
-                              </div>
-                              <div class="carousel-item" data-bs-interval="20000">
-                                <img src="https://i.postimg.cc/90DJnxHc/dishonored-5.jpg" class="d-block w-100" alt="...">
-                                <p>Dishonored is a series of action-adventure games developed by Arkane Studios, and published by Bethesda Softworks. The franchise started with 2012 with Dishonored. A sequel, Dishonored 2 was released in 2016. A standalone expansion to Dishonored 2, Death of the Outsider, was released in 2017. </p>
-                              </div>
-                              <div class="carousel-item" data-bs-interval="10000">
-                                <img src="https://i.postimg.cc/qMs6s8WY/uh-Wvgrh-Jk-Mk2-Kt-Srmq-XO6qr-Y7nkey-GMO.jpg" class="d-block w-100" alt="...">
-                                <p>Mass Effect 3 is an action role-playing video game developed by BioWare and published by Electronic Arts. The third major entry in the Mass Effect series and the final installment of the original trilogy, it was released in March 2012 for Microsoft Windows, Xbox 360, and PlayStation 3.</p>
-                              </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
-                            </button>
-                          </div>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                  </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+      </div>
+      </div>
+      </div>
+        </div>
+      </div>
+</section>
+<br>
+<!-- Contact -->
+<section id="Contact" class="container-fluid contact colorA rounded-3 ">
+<div class="border-5">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-4 ">
+            <h2 class="text-light">Contact</h2>
+            <form action="https://formspree.io/f/mbjbzywd" method="post" class="mt-3">
+                <div>
+                    <input type="text" class="form-control" placeholder="Enter your Name" name="firstName" required>
                 </div>
-              </div>
-            </div>
-            </div>
-        </div>
-    </section>
-    <br>
-    <!-- Contact -->
-    <section id="Contact" class="container-fluid contact colorA rounded-3 ">
-        <div class="border-5">
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-4 ">
-                    <h2 class="text-light">Contact</h2>
-                    <form action="https://formspree.io/f/mbjbzywd" method="post" class="mt-3">
-                        <div>
-                            <input type="text" class="form-control" placeholder="Enter your Name" name="firstName" required>
-                        </div>
-                        <div class="my-3">
-                            <input type="text" placeholder="Enter your Surname" name="lastName" class="form-contol">
-                        </div>
-                        <div>
-                            <select class="form-select" aria-label="Default select example" name="gender">
-                                <option selected disabled>Gender</option>
-                                <option value="1">Male</option>
-                                <option value="2">Female</option>
-                                <option value="3">Other</option>
-                            </select>
-                        </div>
-                        <div>
-                            <button type="submit" class="btn btn-outline-info">Submit</button>
-                        </div>
-                    </form>
+                <div class="my-3">
+                    <input type="text" placeholder="Enter your Surname" name="lastName" class="form-contol">
                 </div>
-            </div>
+                <div>
+                    <select class="form-select" aria-label="Default select example" name="gender">
+                        <option selected disabled>Gender</option>
+                        <option value="1">Male</option>
+                        <option value="2">Female</option>
+                        <option value="3">Other</option>
+                    </select>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-outline-info">Submit</button>
+                </div>
+            </form>
         </div>
-    </section>
+    </div>
+</div>
+</section>
 </main>
 <br>
 <footer class="bg-dark text-white rounded-3">
@@ -323,4 +255,4 @@
   <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
-</html>
+</html>                     
