--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <title>Ghost-Gaming</title>
 </head>
-<body class="bg-secondary">
+<body class="bg-black">
 <header>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark rounded-4">
         <div class="container-fluid d-flex">
@@ -34,7 +34,7 @@
       </nav>
 </header>
     <br>
-<main class="bg-secondary">
+<main class="bg-black">
 <!--Home Section-->
     <section id="Home" class="main-content colorA rounded-4">
         <div class="container-fluid text-center">
@@ -247,7 +247,7 @@
 </section>
 </main>
 <br>
-<footer class="bg-dark text-white rounded-3">
+<footer class="bg-black text-white rounded-3">
     <p>Copyright &copy; 2022</p>
     <p class="text-center text-decoration-underline">*South Africa |7785 |Cape Town |233 Wandel Crescent |Woodridge |22nd Floor |Thomas-Building* </p>
     <br>
